<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/llama_home"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="174dp"/>

    <TextView
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:lineSpacingExtra="-18sp"
        android:text="@string/name_sentence"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.2"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/gray_200"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button_tohome"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="168dp"
        android:backgroundTint="@color/red_700"
        android:text="@string/txt_btn_go"
        android:textAllCaps="false"
        app:cornerRadius="100dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.168" />
</androidx.constraintlayout.widget.ConstraintLayout>